@@ -194,26 +194,10 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <jvmArguments>--add-modules java.xml.bind</jvmArguments>
+                    <!--TODO remove once this is fixed-->
+                    <jvmArguments>--add-modules java.xml.bind --add-opens java.base/java.lang=ALL-UNNAMED</jvmArguments>
                     <mainClass>com.ferzerkerx.albumfinder.AlbumFinderApplication</mainClass>
                 </configuration>
-                <executions>
-                    <execution>
-                        <!-- Spring Boot Actuator displays build-related information
-                          if a META-INF/build-info.properties file is present -->
-                        <goals>
-                            <goal>build-info</goal>
-                        </goals>
-                        <configuration>
-                            <additionalProperties>
-                                <encoding.source>${project.build.sourceEncoding}</encoding.source>
-                                <encoding.reporting>${project.reporting.outputEncoding}</encoding.reporting>
-                                <java.source>${maven.compiler.source}</java.source>
-                                <java.target>${maven.compiler.target}</java.target>
-                            </additionalProperties>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
